<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uvs_gzplugins</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1476900130@qq.com">dillon</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>
  <depend>uvs_message</depend>
  <depend>uvs_tools</depend>

  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rclcpp</build_depend>

  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
